# proto-example

./: .gitignore  README.md  package.json
backend/: Cargo.toml  Dockerfile
backend/.ai/: cursor.md
backend_test_one/src/: main.rs
proxy/: README.md  package.json  pnpm-lock.yaml
proxy/proto/: auth.proto
proxy/src/: grpc-client.ts  server.ts
proxy/src/routes/: auth.ts
simple-proto/: app.json  package-lock.json  package.json
simple-proto/app/: LoggedInScreen.tsx
simple-proto/src/: App.tsx
